<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_addedittodo">
    <data>
        <variable
            name="viewmodel"
            type="com.example.innovateapprecruitmenttest.viewmodel.AddEditTodoViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="32sp"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/et_title"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.title}"
            android:hint="@string/et_title_hint"
            />
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_description_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="32sp"
            android:layout_marginTop="16dp"/>
        <EditText
            android:id="@+id/et_description"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.description}"
            android:hint="@string/et_description_hint"
            />

        <TextView
            android:id="@+id/tv_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_deadline_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="32sp"
            android:layout_marginTop="16dp"/>
        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_text"
            android:onClick="@{() -> viewmodel.saveTodo()}"/>
    </LinearLayout>
</layout>